load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "modular_cc_toolchain_rules",
    srcs = [
        "@bazel_tools//tools:bzl_srcs",
        "//cc:bzl_srcs",
        "@rules_cc//cc:bzl_srcs",
    ],
)

stardoc(
    name = "cc_feature_docs",
    input = "//cc:features.bzl",
    out = "feature_doc.md",
    deps = [":modular_cc_toolchain_rules"],
)